--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,10 @@
     --text-color: #333;
     --primary-color: rgb(238, 75, 43);
     --boder-color : #dbdbdb;
+
+    --header-height: 120px;
+    --navbar-height: 34px;
+    --header-with-search-height : calc(var(--header-height) - var(--navbar-height));
 }
 
 * {
@@ -48,6 +52,15 @@ html {
     }
 }
 
+@keyframes growth {
+    from {
+        transform: scale(var(--growth-from));
+    }
+    to {
+        transform: scale(var(--growth-to));
+    }
+}
+
 /* MOdal */
 .modal {
     position: fixed;
@@ -56,6 +69,7 @@ html {
     left: 0;
     bottom: 0;
     display: flex;
+    animation: fadeIn linear 0.1s;
 }
 
 .modal__overlay {
@@ -66,16 +80,18 @@ html {
 }
 
 .model__body{
+    --growth-from: 0.7;
+    --growth-to : 1;
     margin: auto;
     position: relative;
     z-index: 1;
     border-radius: 5px;
-
+    animation: growth linear 0.1s;
 }
 
 /* Button style */
 .btn {
-    min-width: 142px;
+    min-width: 124px;
     height: 34px;
     text-decoration: none;
     border: none;
