--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@
 .header .navbar__item,
 .header .navbar-item-link {
     display: inline-block;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     color: var(--white-color);
     text-decoration: none;
     font-weight: 300;
@@ -72,6 +72,10 @@
 .header .navbar__icon-link {
     color: var(--white-color);
     text-decoration: none;
+}
+
+.header .navbar__icon-link:nth-child(2) {
+    margin-left: 3px;
 }
 
 .header .navbar__item-icon {
@@ -131,14 +135,16 @@
     width: 404px;
     background-color: var(--white-color);
     right: 0;
-    border: 1px solid #D3D3D3;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: default;
-    transform-origin: calc(100% - 20px) top;
+    transform-origin: calc(100% - 32px) top;
     animation: headerNotiGrowth ease-in 0.2s ;
     will-change: opacity, transform;
     -webkit-animation:headerNotiGrowth ease-in 0.2s;
     -o-animation: headerNotiGrowth ease-in 0.2s;
     display: none;
+    z-index: 1;
+    border-radius: 2px;
 }
 
 .header__notify::before {
@@ -391,6 +397,11 @@
     width: 200px;
 }
 
+.header__logo-link {
+    color: transparent;
+    text-decoration: none;
+}
+
 .header__logo-img {
     width: 150px;
 }
@@ -548,9 +559,9 @@
 }
 
 .header__navbar-user-name {
-    margin-left: 8px;
+    margin-left: 4px;
     font-size: 1.4rem;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .header__navbar-user:hover .header__navbar-user-menu {
@@ -560,7 +571,7 @@
 .header__navbar-user-menu {
     position: absolute;
     z-index: 1;
-    top: 100%;
+    top: calc(100% + 4px);
     right: 0;
     background-color: var(--white-color);
     border-radius: 2px;
@@ -573,12 +584,12 @@
 
 .header__navbar-user-menu::before {
     content: "";
-    border-width: 12px 20px;
+    border-width: 12px 14px;
     border-style: solid;
     border-color: transparent transparent var(--white-color) transparent;
     position: absolute;
-    right: 4px;
-    top: -20px;
+    right: 5px;
+    top: -22px;
 }
 
 .header__navbar-user-menu::after {
@@ -591,8 +602,8 @@
     height: 8px;
 }
 
-.header__navbar-user-item {
-
+.header__navbar-user-item--separate {
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 .header__navbar-user-item a {
@@ -743,7 +754,7 @@
 .header__search-option {
     position: absolute;
     right: 0;
-    top: 100%;
+    top: calc(100% - 2px);
     width: 130px;
     list-style: none;
     box-shadow: 0 0 3px #ccc;
@@ -825,4 +836,145 @@
     font-size: 1.4rem;
     color: var(--text-color);
     line-height: 38px;
+}
+
+/* App container */
+.app__container {
+    background-color: #f5f5f5;
+}
+
+.app__content {
+    padding-top: 36px;
+}
+
+.category {
+    background-color: var(--white-color);
+    border-radius: 2px;
+}
+
+.category__heading {
+    font-size: 1.7rem;
+    color: var(--text-color);
+    padding: 12px 16px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    margin-top: 0;
+}
+
+.category__heading-icon {
+    font-size: 1.4rem;
+    margin-right: 4px;
+    position: relative;
+    top: -1px;
+    
+} 
+
+.category-list {
+    padding:0 0 8px 0;
+    list-style: none;
+    margin-left: 8px;
+}
+
+.category-item--active .category-item__link {
+    color: var(--primary-color);
+}
+
+.category-item--active .category-item__link::before {
+    content: "";
+    top: 50%;
+    left: 8px;
+    position: absolute;
+    border: 4px solid ;
+    transform: translateY(-50%);
+    border-color: transparent transparent transparent var(--primary-color);
+}
+
+.category-item__link {
+    position: relative;
+    display: block;
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.5rem;
+    padding: 6px 16px;   
+    transition: right linear 0.1s;
+    right: 0;
+}
+
+
+.category-item__link:hover {
+    right: -4px;
+    color: var(--primary-color);
+}
+
+
+/* Home sort + filter */
+.home-filter {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.04);
+    display: flex;
+    align-items: center ;
+    padding: 12px 22px;
+    border-radius: 2px;
+}
+
+.home-filter__label {
+    color: #555;
+    font-size: 1.4rem;
+    margin-right: 16px;
+}
+
+.home-filter__btn {
+    margin-right: 12px;
+    min-width: 90px;
+    background-color: var(--white-color);
+}
+
+.home-filter__pag {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.home-filter__pag-num {
+    font-size: 1.5rem;
+    color: var(--text-color);
+    margin-right: 22px;
+}
+
+.home-filter__pag-curent {
+    color: var(--primary-color);
+}
+
+.home-filter__pag-control {
+    border-radius: 2px;
+    overflow: hidden;
+    display: flex;
+    width: 72px;
+    height: 36px;
+}
+
+.home-filter__pag-btn {
+    flex: 1;
+    display: flex;
+    background-color: var(--white-color);
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #555;
+}
+
+.home-filter__pag-btn:first-child {
+    border-right: 1px solid #ccc;
+}
+
+.home-filter__pag-icon {
+    margin: auto;
+}
+
+.home-filter__pag-btn--disable {
+    background-color: #f9f9f9;   
+    cursor: default;
+}
+
+.home-filter__pag-btn--disable .home-filter__pag-icon {
+    color: #ccc;
+    
 }
