--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,7 +4,7 @@
     --text-color: #333;
     --primary-color: rgb(238, 75, 43);
     --boder-color : #dbdbdb;
-
+    --star-gold-color : #ffce3d;
     --header-height: 120px;
     --navbar-height: 34px;
     --header-with-search-height : calc(var(--header-height) - var(--navbar-height));
@@ -36,25 +36,32 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -12px;
-    margin-right: -12px;
+    margin-left: -5px;
+    margin-right: -5px;
 }
 
 .grid__column-2 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 16.6667%;
 }
 
+.grid__column-2-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
+
+
 .grid__column-8 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 66.6667%;
 }
 
 .grid__column-10 {
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
     width: 83.3334%;
 }
 
@@ -179,6 +186,7 @@ html {
     padding: 8px 16px;
     list-style: none;
     display: none;
+    z-index: 1;
 }
 
 .select-input__label {
@@ -202,4 +210,43 @@ html {
 
 .select-input__link:hover {
     color: var(--primary-color);
+}
+
+/* Pagination */
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+}
+
+.pagination-item {
+    margin: 0 12px;
+}
+
+.pagination-item--active .pagination-item__link {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.pagination-item--active:hover .pagination-item__link {
+    opacity: 0.8;
+}
+
+.pagination-item__link {
+    display: block;
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: #939393;
+    min-width: 40px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.pagination-item__icon {
+    font-weight: 100;
 }
