--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,11 +121,10 @@
     position: relative;
 }
 
-.header__sort-link:not(:first-child)::before {
+.header__sort-item:not(:first-child)::before {
     position: absolute;
     content: "";
     top: 50%;
-    left: 0;
     height: 60%;
     transform: translateY(-50%);
     border-left: 1px solid #e5e5e5;
